# exec-rs

./: Cargo.toml  README.md  justfile  mod.nu
.github/workflows/: main.yml
src/: lib.rs
