[package]
name = "exec-rs"
version = "0.1.1"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = { version = "0.11", optional = true }
thiserror = "1.0"
