[package]
name = "exec-rs"
version = "1.0.0"
edition = "2021"
authors = ["Hannes Hochreiner <hannes@hochreiner.net>"]
publish = false
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
mockall = { version = "0.11", optional = true }

[dev-dependencies]
exec-rs = { path=".", features = ["mockall"] }
users = "0.11"
